RESOLVED FIXED313987
Can't scroll the page directly after using stagemode orbit on a model
https://bugs.webkit.org/show_bug.cgi?id=313987
Summary Can't scroll the page directly after using stagemode orbit on a model
Etienne
Reported 2026-05-04 09:56:22 PDT
Can't scroll the page directly after using stagemode orbit on a model
Attachments
Etienne
Comment 1 2026-05-04 09:58:54 PDT
Etienne
Comment 2 2026-05-04 09:59:31 PDT
EWS
Comment 3 2026-05-06 12:41:48 PDT
Committed 312728@main (30a20e67467c): <https://commits.webkit.org/312728@main> Reviewed commits have been landed. Closing PR #64178 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.