Can't scroll the page directly after using stagemode orbit on a model https://bugs.webkit.org/show_bug.cgi?id=313987 <rdar://175797378>

Reviewed by Mike Wyrzykowski.

Async responses for touchend events, like the ones for model orbit,
can cause us to set the "prevents panning flags" and loose the next
scroll gesture.

Check if all touch points are released when setting the prevents panning
flags to avoid preventing subsequent gestures.

* Source/WebCore/Modules/model-element/HTMLModelElement.cpp:
(WebCore::HTMLModelElement::defaultEventHandler):
Drive-by: add the missing touchcancel to the list.
* Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _touchEvent:preventsNativeGestures:]):
If `allTouchPointsAreReleased` reset the flags instead of setting them
to YES.

Canonical link: https://commits.webkit.org/312728@main